[gd_scene load_steps=4 format=3 uid="uid://5wvfgmb5g4ge"]

[ext_resource type="Script" path="res://Script/archer.gd" id="1_hxraj"]
[ext_resource type="Texture2D" uid="uid://c524rl0krv17n" path="res://Asset/Archer/archer.png" id="1_j04nx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4igk3"]
size = Vector2(93, 154)

[node name="archer" type="Area2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_hxraj")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_j04nx")
offset = Vector2(-18, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8.5, -4)
shape = SubResource("RectangleShape2D_4igk3")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(-74, -5)

[node name="MoveTime" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ShootTime" type="Timer" parent="."]
one_shot = true

[node name="PointsTimer" type="Timer" parent="."]
wait_time = 1.4
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="MoveTime" to="." method="_on_move_time_timeout"]
[connection signal="timeout" from="ShootTime" to="." method="_on_shoot_time_timeout"]
[connection signal="timeout" from="PointsTimer" to="." method="_on_points_timer_timeout"]
